add new project

--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
                     <p>HTML - CSS - JavaScript</p>
                     <a href="https://tiendavirtualjs.netlify.app/" target="_blank" class="btn main-btn-dwn">Ver página</a>
                 </div>
+
+                <div class="page">
+                    <h2>ADM Presupuesto</h2>
+                    <img src="images/pages/adm-budget.jpg" alt="adm-budget">
+                    <p>Administración de presupuestos/gastos</p>
+                    <p>MERN Stack</p>
+                    <p>Material Ui React</p>
+                    <a href="https://github.com/NicooRomero/admgastos" target="_blank" class="btn main-btn-dwn">Ver codigo</a>
+                </div>
             </div>
         </div>
     </section>
